Big code cleanup of ReplicationCliMain
ReplicationCliMain.java:
Fixed a bug in askForAdministratorPwd() introduced by r10542.
Used early exits + inverted equals().
Removed printPurgeHistoricalEquivalentIfRequired(), replaced by mustPrintCommandBuilder() + printNewCommandBuilder().
Changed printCommandBuilder() into printNewCommandBuilder()
Extracted several createAdministrativeContext() methods.
Extracted methods checkSuffixesForPurgeHistorical(), containsDN(), askConfirmation(LocalizableMessage, boolean), createStandalone(), getAllReplicationServers(), getPropertiesToCompare(), equals(), exists(), findReplicated(),
Renamed exists() and exists2() to containsIgnoreCase() + find() to findIgnoreCase().
Extracted EMPTY_MSG constant.

TopologyCache.java:
Code cleanup.

ConnectionUtils.java:
Removed isCertificateException(), duplicated with com.forgerock.opendj.cli.Utils.isCertificateException() + updated client code to use the latter.

DisableReplicationUserData.java:
Now extends MonoServerReplicationUserData.
Removed duplicate fields and methods.